--- a/style.css
+++ b/style.css
@@ -18,7 +18,6 @@ body{
 .header-items{
     position: absolute;
     top: 1%;
-    flex-grow:4;
 }
 #logo{
     height:5vh;
@@ -40,6 +39,12 @@ body{
     height:50vh;
     width:30vw;
 }
+.para1 button{
+    height:8vh;
+    width:10vw;
+    background-color: #C4DEFD;
+    margin-top: 2%;
+}
 .image1{
     background-color: #C4DEFD;
     height:50vh;
@@ -56,6 +61,12 @@ body{
 .para2{
     height:50vh;
     width:30vw;
+}
+.para2 button{
+    height:6vh;
+    width:10vw;
+    margin-top: 2%;
+    background-color: #C4DEFD;
 }
 .image2{
     background-color: #C4DEFD;
@@ -76,6 +87,12 @@ body{
     height:50vh;
     width:30vw;
 }
+.para3 button{
+    height:6vh;
+    width:10vw;
+    margin-top: 2%;
+    background-color: #C4DEFD;
+}
 .image3{
     background-color: #C4DEFD;
     height:50vh;
@@ -93,8 +110,8 @@ body{
 .box{
     height:80vh;
     width:55vw;
-    border-radius:5%;
-    border:1px solid gray;
+    border-radius:3%;
+    border:1px solid rgb(168, 168, 168);
     transition:1s;
     padding: 2%;
 }
@@ -104,10 +121,16 @@ body{
     transform: scale(1.1);
 }
 .box p{
-    margin-bottom:10px;
-    margin-top:5px;
+    margin-bottom:20px;
+    margin-top:10px;
     text-align:left;
     padding-left:10px;
+}
+.box button{
+    height:7vh;
+    width:8vw;
+    border-radius:8%;
+    border: none;
 }
 .box-p{
     position: relative;
@@ -118,19 +141,25 @@ body{
     top:0px;
     height:25px;
 }
+.sponsers{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    gap:3%
+}
 .container7{
     display: flex;
     flex-direction: row;
     justify-content: center;
     align-items: center;
     height: 100vh;
-    padding:5%;
     gap: 2%;
+    position: relative;
 }
 .box1{
     height:220px;
-    width:250px;
-    border-radius:5%;
+    width:200px;
     background-color: #4F9CF9;
     color:white;
     transition:1s;
@@ -143,16 +172,51 @@ body{
 .box1:hover{
     background-color:white;
     color: black;
+    box-shadow:10px 10px 10px 10px rgb(185, 185, 185);
+}
+#Quote{
+    position: absolute;
+    top: 3px;
 }
 .sub-box1{
-    display: flex;
-    flex-direction:row;
-    height:10px;
+    display:flex;
+    flex-direction: row;
 }
 #Avatar{
-    clip-path: circle(20%);
-    image-sizing:cover;
+    clip-path: circle(35%);
+    height:150px;
+    object-fit:contain;
     position: absolute;
     bottom: 1px;
-    left:-90px;
+    left:-20px;
+}
+#Slider{
+    position: absolute;
+    bottom: 50px;
+}
+.container8{
+    display: flex;
+    flex-direction: row;
+    justify-content:space-evenly;
+    align-items:center;
+    background-color: #043873;
+    color: white;
+    gap:2%;
+    padding:5%;
+    margin-bottom: 5%;
+}
+#img1{
+    height:5vh;
+}
+.items{
+    height:100px;
+    width:180px;
+}
+.items button{
+    height: 6vh;
+    width: 10vw;
+    margin-top:2%;
+    background-color: #C4DEFD;
+    border-radius: 4%;
+    border: none;
 }
